Fix spacing issues in icon and social layout

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -28,7 +28,9 @@ body {
 
 .left {
   border-right: 1px solid #eee;
-  padding: 40px;
+  padding: 40px 20px 0 40px;
+  display: flex;
+  flex-direction: column;
 }
 
 .name {
@@ -77,6 +79,7 @@ h3 {
   display: flex;
   flex-direction: column;
   padding: 40px;
+  min-width: 332px;
 }
 
 .social {
@@ -105,6 +108,7 @@ h3 {
 .contact i {
   font-size: 14px;
   margin-right: 10px;
+  vertical-align: middle;
 }
 
 .contact {
